--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "@ant-design/pro-components": "^2.3.54",
     "antd": "^5.1.7",
     "classnames": "^2.3.2",
     "react": "^18.2.0",
