--- a/package.json
+++ b/package.json
@@ -10,10 +10,19 @@
   },
   "dependencies": {
     "@ant-design/pro-components": "^2.3.54",
+    "@faker-js/faker": "^8.0.2",
+    "@radix-ui/colors": "^0.1.8",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@tanstack/react-table": "^8.9.1",
     "antd": "^5.1.7",
     "classnames": "^2.3.2",
+    "radix-ui": "^1.0.1",
     "react": "^18.2.0",
+    "react-aria": "^3.25.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
+    "react-stately": "^3.23.0",
     "web-vitals": "^3.1.1"
   },
   "devDependencies": {
