--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "antd-playground",
+  "name": "headless",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -9,12 +9,12 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
-    "@ant-design/pro-components": "^2.3.54",
+    "@ant-design/pro-components": "^2.5.2",
     "@faker-js/faker": "^8.0.2",
     "@radix-ui/colors": "^0.1.8",
     "@radix-ui/react-icons": "^1.3.0",
     "@tanstack/react-table": "^8.9.1",
-    "antd": "^5.1.7",
+    "antd": "^5.5.2",
     "classnames": "^2.3.2",
     "radix-ui": "^1.0.1",
     "react": "^18.2.0",
@@ -23,20 +23,20 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-stately": "^3.23.0",
-    "web-vitals": "^3.1.1"
+    "web-vitals": "^3.3.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
+    "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
-    "@types/jest": "^29.4.0",
-    "@types/node": "^18.11.18",
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
-    "@wixc3/react-board": "^2.1.3",
+    "@types/jest": "^29.5.1",
+    "@types/node": "18",
+    "@types/react": "^18.2.7",
+    "@types/react-dom": "^18.2.4",
+    "@wixc3/react-board": "^2.2.1",
     "react-scripts": "^5.0.1",
-    "sass": "^1.57.1",
-    "typescript": "^4.9.4"
+    "sass": "^1.62.1",
+    "typescript": "5.0.4"
   },
   "eslintConfig": {
     "extends": [
@@ -55,5 +55,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "overrides": {
+    "typescript": "5.0.4"
   }
 }
