--- a/package.json
+++ b/package.json
@@ -11,28 +11,38 @@
   },
   "dependencies": {
     "@radix-ui/colors": "^3.0.0",
+    "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-popover": "^1.0.7",
     "@tanstack/react-table": "^8.11.8",
     "antd": "^5.14.0",
+    "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
+    "clsx": "^2.1.0",
     "react": "^18.2.0",
     "react-aria": "^3.31.1",
     "react-dom": "^18.2.0",
-    "react-stately": "^3.29.1"
+    "react-stately": "^3.29.1",
+    "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
+    "@types/node": "^20.11.17",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "@vitejs/plugin-react": "^4.2.1",
     "@wixc3/react-board": "^2.4.0",
+    "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "postcss": "^8.4.35",
     "sass": "^1.70.0",
+    "tailwindcss": "^3.4.1",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "~5.3.3",
     "vite": "^5.1.1"
   }
