fix: tailwind integration and path aliases

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,8 @@
     // ...
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "utils": ["./src/lib/utils"]
     }
   },
   "include": ["src"],
