--- a/codux.config.json
+++ b/codux.config.json
@@ -1,5 +1,12 @@
 {
   "$schema": "https://wixplosives.github.io/codux-config-schema/codux.config.schema.json",
+  "boardGlobalSetup": "./src/_codux/boards-global-setup.ts",
+  "resolve": {
+    "alias": {
+      "@/*": "./src/*",
+      "utils": "./src/lib/utils"
+    }
+  },
   "componentsDiscovery": {
     "include": ["src/**"],
     "exclude": ["src/_codux/component-templates/**"]
